# nixos-updatechecker

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  pyproject.toml
nix/modules/: home.nix
nix/pkgs/: nixos-updatechecker.nix
nixos_updatechecker/: __main__.py  config.py  controller.py  core.py  indicator.py  main.py  utils.py
